<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoneyActivity">

    <EditText
        android:id="@+id/rmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/rmb"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/result"
        android:gravity="center"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/rmb"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btn_dollar"
        android:layout_width="226dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/material_dynamic_primary60"
        android:gravity="center"
        android:onClick="MoneyClick"
        android:text="@string/btn_dollar"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/btn_euro"
        android:layout_width="226dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/material_dynamic_primary60"
        android:gravity="center"
        android:onClick="MoneyClick"
        android:text="@string/btn_euro"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dollar" />

    <Button
        android:id="@+id/btn_won"
        android:layout_width="226dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@color/material_dynamic_primary60"
        android:gravity="center"
        android:onClick="MoneyClick"
        android:text="@string/btn_won"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_euro" />

    <Button
        android:id="@+id/btn_config"
        android:layout_width="226dp"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:background="@color/material_dynamic_primary60"
        android:gravity="center"
        android:onClick="clickOpen"
        android:text="@string/btn_config"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_euro" />


</androidx.constraintlayout.widget.ConstraintLayout>
